Logging implemented properties file form changed

--- a/src/resources/config.properties
+++ b/src/resources/config.properties
@@ -1,16 +1,16 @@
 dev = false
-rFacileNbDigits = 4
-rFacileNbTrials = 5
-rNormalNbDigits = 8
-rNormalNbTrials = 6
-rDifficileNbDigits = 12
-rDifficileNbTrials = 8
-mFacileNbColors = 6
-mFacileNbDigits = 4
-mFacileNbTrials = 10
-mNormalNbColors = 8
-mNormalNbDigits = 5
-mNormalNbTrials = 10
-mDifficileNbColors = 10
-mDifficileNbDigits = 6
-mDifficileNbTrials = 10
+recherche.facile.nbDigits = 4
+recherche.facile.nbTrials = 5
+recherche.normal.nbDigits = 8
+recherche.normal.nbTrials = 6
+recherche.difficile.nbDigits = 12
+recherche.difficile.nbTrials = 8
+mastermind.facile.nbColors = 6
+mastermind.facile.nbDigits = 4
+mastermind.facile.nbTrials = 10
+mastermind.normal.nbColors = 8
+mastermind.normal.nbDigits = 5
+mastermind.normal.nbTrials = 10
+mastermind.difficile.nbColors = 10
+mastermind.difficile.nbDigits = 6
+mastermind.difficile.nbTrials = 10
